添加了代码压缩，小背景图标合并

--- a/src/common/common.css
+++ b/src/common/common.css
@@ -48,5 +48,5 @@ h3{ff @ft  ;fn;}
     &{hlh 70px  ;bg #3e3e3e  ;}
     p{c #848482  ;}
     span{fr;c #d3d3d3  ;cp;}
-    span i{dib;w 13px  ;h 9px  ;bg url(images/ico/top-ico.jpg)  ;ml 18px  ;}
+    span i{dib;w 13px  ;h 9px  ;bg url(images/ico/top-ico.jpg?__bg)  ;ml 18px  ;}
 }
