some change for init.less

--- a/src/static/init.less
+++ b/src/static/init.less
@@ -62,6 +62,8 @@
 
 .fl(@parameter:left){float:@parameter}.fr(@parameter:right){float:@parameter}
 
+.clearfix(){visibility:hidden; display:block; font-size:0; content: " "; clear:both; height:0;}
+
 .vm(@parameter:middle){vertical-align:@parameter;}.vt(@parameter:top){vertical-align:@parameter;}.vb(@parameter:bottom){vertical-align:@parameter;}
 .z1(@parameter:1){*zoom:@parameter}
 .vm7(@parameter:middle){*vertical-align:@parameter;*display:inline;*zoom:1;}
