引进了bootstrap3 less 定制

--- a/src/common/common.css
+++ b/src/common/common.css
@@ -1,22 +1,22 @@
 /*———————————— import ————————————*/
-@import "../static/init";
-@import "../static/global";
+/*Core variables and mixins*/
+@import "../static/less/variables.less";
+@import "../static/less/mixins.less";
 
-/*———————————— init ————————————*/
-html{overflow-y:scroll;}/* 让非ie浏览器默认也显示垂直滚动条，防止因滚动条引起的闪烁 */
-body,h1,h2,h3,h4,p,dl,dt,dd,ul,ol,li,button,input,textarea,th,td {margin:0;padding:0;}
-h1,h2,h3,h4{lh 100%  ;}
-ul,ol{list-style:none;}
-p{tj;}
-a{text-decoration:none;}
-img{border:none;}
-button,input,select,textarea{font-size:100%;}/* 使得表单元素在 ie 下能继承字体大小 */
-:focus{outline:0}
-table{border-collapse:collapse;border-spacing:0;}
-figure{margin:0;}
-/*清除浮动*/
-.clearfix:after{content:".";display:block;clear:both;visibility:hidden;height:0;font-size:0;}
-.clearfix{*zoom:1;} 
+/* Reset and dependencies*/
+@import "../static/less/normalize.less";
+@import "../static/less/glyphicons.less";
+
+/* Core CSS */
+@import "../static/less/scaffolding.less";
+@import "../static/less/type.less";
+@import "../static/less/code.less";
+@import "../static/less/grid.less";
+@import "../static/less/buttons.less";
+
+
+@import "../static/init.less";
+
 
 /*———————————— common ————————————*/
 
