--- a/src/index/index.css
+++ b/src/index/index.css
@@ -1,5 +1,4 @@
 /*———————————— import ————————————*/
-@import "../static/init";
-@import "../static/global";
+@import "../static/init.less";
 
 /*———————————— 关于我们 ————————————*/
