--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,5 +1,4 @@
 /*———————————— import ————————————*/
-@import "../static/init";
-@import "../static/global";
+@import "../static/init.less";
 
 /*———————————— 关于我们 ————————————*/
