bs样式全部引入，js按需引入

--- a/src/static/less/navbar.less
+++ b/src/static/less/navbar.less
@@ -376,9 +376,8 @@
 // Declared after the navbar components to ensure more specificity on the margins.
 
 @media (min-width: @grid-float-breakpoint) {
-  .navbar-left  { .pull-left(); }
+  .navbar-left  {  }
   .navbar-right {
-    .pull-right();
     margin-right: -@navbar-padding-horizontal;
 
     ~ .navbar-right {
