--- a/src/static/less/bootstrap.less
+++ b/src/static/less/bootstrap.less
@@ -5,52 +5,52 @@
  */
 
 // Core variables and mixins
-@import "variables.less";
-@import "mixins.less";
+@import "../static/less/variables.less";
+@import "../static/less/mixins.less";
 
 // Reset and dependencies
-@import "normalize.less";
-@import "print.less";
-@import "glyphicons.less";
+@import "../static/less/normalize.less";
+@import "../static/less/print.less";
+@import "../static/less/glyphicons.less";
 
 // Core CSS
-@import "scaffolding.less";
-@import "type.less";
-@import "code.less";
-@import "grid.less";
-@import "tables.less";
-@import "forms.less";
-@import "buttons.less";
+@import "../static/less/scaffolding.less";
+@import "../static/less/type.less";
+@import "../static/less/code.less";
+@import "../static/less/grid.less";
+@import "../static/less/tables.less";
+@import "../static/less/forms.less";
+@import "../static/less/buttons.less";
 
 // Components
-@import "component-animations.less";
-@import "dropdowns.less";
-@import "button-groups.less";
-@import "input-groups.less";
-@import "navs.less";
-@import "navbar.less";
-@import "breadcrumbs.less";
-@import "pagination.less";
-@import "pager.less";
-@import "labels.less";
-@import "badges.less";
-@import "jumbotron.less";
-@import "thumbnails.less";
-@import "alerts.less";
-@import "progress-bars.less";
-@import "media.less";
-@import "list-group.less";
-@import "panels.less";
-@import "responsive-embed.less";
-@import "wells.less";
-@import "close.less";
+@import "../static/less/component-animations.less";
+@import "../static/less/dropdowns.less";
+@import "../static/less/button-groups.less";
+@import "../static/less/input-groups.less";
+@import "../static/less/navs.less";
+@import "../static/less/navbar.less";
+@import "../static/less/breadcrumbs.less";
+@import "../static/less/pagination.less";
+@import "../static/less/pager.less";
+@import "../static/less/labels.less";
+@import "../static/less/badges.less";
+@import "../static/less/jumbotron.less";
+@import "../static/less/thumbnails.less";
+@import "../static/less/alerts.less";
+@import "../static/less/progress-bars.less";
+@import "../static/less/media.less";
+@import "../static/less/list-group.less";
+@import "../static/less/panels.less";
+@import "../static/less/responsive-embed.less";
+@import "../static/less/wells.less";
+@import "../static/less/close.less";
 
 // Components w/ JavaScript
-@import "modals.less";
-@import "tooltip.less";
-@import "popovers.less";
-@import "carousel.less";
+@import "../static/less/modals.less";
+@import "../static/less/tooltip.less";
+@import "../static/less/popovers.less";
+@import "../static/less/carousel.less";
 
 // Utility classes
-@import "utilities.less";
-@import "responsive-utilities.less";
+@import "../static/less/utilities.less";
+@import "../static/less/responsive-utilities.less";
